Fix CSS for textareas in windows
Summary:
Windows browsers default to monospace textareas, which look bad. Let's
use the same font we're using everywhere else.

Test Plan:
load differential in firefox on windows and see that the comment box in
differential is no longer Courier New.

Reviewers: chad, epriestley

Reviewed By: epriestley

CC: btrahan, vrana, aran, Korvin

Differential Revision: https://secure.phabricator.com/D3968

--- a/webroot/rsrc/css/core/core.css
+++ b/webroot/rsrc/css/core/core.css
@@ -69,6 +69,10 @@ body.phabricator-chromeless-page {
   background: #ffffff;
 }
 
+textarea {
+  font-family: inherit;
+}
+
 table {
   font-size: inherit;
   font: 100%;
